--- a/gradle/tasks.gradle
+++ b/gradle/tasks.gradle
@@ -1,19 +1,28 @@
-import org.apache.ivy.util.url.*
+import org.apache.ivy.util.url.ApacheURLLister
 import org.apache.tools.ant.taskdefs.condition.Os
-import org.gradle.api.tasks.Copy
+import org.gradle.internal.logging.text.StyledTextOutputFactory
 
-import java.nio.file.*
-import org.gradle.internal.logging.text.StyledTextOutputFactory;
-import static org.gradle.internal.logging.text.StyledTextOutput.Style;
+import java.nio.file.Files
+import java.nio.file.Paths
+import java.nio.file.StandardCopyOption
+
+import static org.gradle.internal.logging.text.StyledTextOutput.Style
 
 buildscript {
     repositories {
         mavenLocal()
         mavenCentral()
         jcenter()
+        maven {
+            url "https://oss.sonatype.org/content/repositories/snapshots"
+            mavenContent { snapshotsOnly() }
+        }
     }
+    
     dependencies {
         classpath "org.apache.ivy:ivy:${project.ivyVersion}"
+        classpath "org.apereo.cas:cas-server-core-api-configuration-model:${project.'cas.version'}"
+        classpath "org.apereo.cas:cas-server-core-configuration-metadata-repository:${project.'cas.version'}"
     }
 }
 
@@ -22,11 +31,13 @@ apply plugin: "de.undercouch.download"
 def tomcatDirectory = "${buildDir}/apache-tomcat-${tomcatVersion}"
 project.ext."tomcatDirectory" = tomcatDirectory
 
-def explodedDir="${buildDir}/cas"
-def explodedResourcesDir="${buildDir}/cas-resources"
-def resourceJarName = "cas-server-webapp-resources"
+def explodedDir = "${buildDir}/cas"
+def explodedResourcesDir = "${buildDir}/cas-resources"
 
-task copyCasConfiguration(type: Copy, group: "build", description: "Copy the CAS configuration from this project to /etc/cas/config") {
+def resourcesJarName = "cas-server-webapp-resources"
+def templateViewsJarName = "cas-server-support-thymeleaf"
+
+task copyCasConfiguration(type: Copy, group: "CAS", description: "Copy the CAS configuration from this project to /etc/cas/config") {
     from "etc/cas/config"
     into new File('/etc/cas/config').absolutePath
     doFirst {
@@ -34,16 +45,26 @@ task copyCasConfiguration(type: Copy, group: "build", description: "Copy the CAS
     }
 }
 
-task explodeWarOnly(type: Copy, group: "build", description: "Explodes the CAS web application archive") {
+task explodeWarOnly(type: Copy, group: "CAS", description: "Explodes the CAS web application archive") {
     dependsOn 'build'
     from zipTree("build/libs/${casWebApplicationBinaryName}")
     into explodedDir
+    doLast {
+        println "Exploded WAR into ${explodedDir}"
+    }
 }
 
-task explodeWar(type: Copy, group: "build", description: "Explodes the CAS archive and resources jar from the CAS web application archive") {
+task explodeWar(type: Copy, group: "CAS", description: "Explodes the CAS archive and resources jar from the CAS web application archive") {
     dependsOn explodeWarOnly
-    from zipTree("${explodedDir}/WEB-INF/lib/${resourceJarName}-${casServerVersion}.jar")
+    from zipTree("${explodedDir}/WEB-INF/lib/${templateViewsJarName}-${casServerVersion}.jar")
     into explodedResourcesDir
+
+    from zipTree("${explodedDir}/WEB-INF/lib/${resourcesJarName}-${casServerVersion}.jar")
+    into explodedResourcesDir
+    
+    doLast {
+        println "Exploded WAR resources into ${explodedResourcesDir}"
+    }
 }
 
 task run(group: "build", description: "Run the CAS web application in embedded container mode") {
@@ -54,19 +75,20 @@ task run(group: "build", description: "Run the CAS web application in embedded c
             main = "-jar"
             jvmArgs = casRunArgs
             args = ["build/libs/${casWebApplicationBinaryName}"]
+            systemProperties = System.properties
             logger.info "Started ${commandLine}"
         }
     }
 }
 
-task setExecutable(group: "build", description: "Configure the project to run in executable mode") {
+task setExecutable(group: "CAS", description: "Configure the project to run in executable mode") {
     doFirst {
         project.setProperty("executable", "true")
         logger.info "Configuring the project as executable"
     }
 }
 
-task executable(type:Exec, group: "build", description: "Run the CAS web application in standalone executable mode") {
+task executable(type: Exec, group: "CAS", description: "Run the CAS web application in standalone executable mode") {
     dependsOn setExecutable, 'build'
     doFirst {
         workingDir "."
@@ -78,7 +100,7 @@ task executable(type:Exec, group: "build", description: "Run the CAS web applica
     }
 }
 
-task debug(group: "build", description: "Debug the CAS web application in embedded mode on port 5005") {
+task debug(group: "CAS", description: "Debug the CAS web application in embedded mode on port 5005") {
     dependsOn 'build'
     doLast {
         logger.info "Debugging process is started in a suspended state, listening on port 5005."
@@ -88,12 +110,13 @@ task debug(group: "build", description: "Debug the CAS web application in embedd
             jvmArgs = casArgs
             debug = true
             args = ["build/libs/${casWebApplicationBinaryName}"]
+            systemProperties = System.properties
             logger.info "Started ${commandLine}"
         }
     }
 }
 
-task downloadShell(group: "shell", description: "Download CAS shell jar from snapshot or release maven repo") {
+task downloadShell(group: "Shell", description: "Download CAS shell jar from snapshot or release maven repo") {
     doFirst {
         mkdir "${project.shellDir}"
     }
@@ -102,7 +125,7 @@ task downloadShell(group: "shell", description: "Download CAS shell jar from sna
         if (isRunningCasServerSnapshot(casServerVersion)) {
             def snapshotDir = "https://oss.sonatype.org/content/repositories/snapshots/org/apereo/cas/cas-server-support-shell/${casServerVersion}/"
             def files = new ApacheURLLister().listFiles(new URL(snapshotDir))
-            files = files.sort{it.path}
+            files = files.sort { it.path }
             files.each {
                 if (it.path.endsWith(".jar")) {
                     downloadFile = it
@@ -120,14 +143,14 @@ task downloadShell(group: "shell", description: "Download CAS shell jar from sna
     }
 }
 
-task runShell(group: "shell",  description: "Run the CAS shell") {
+task runShell(group: "Shell", description: "Run the CAS shell") {
     dependsOn downloadShell
     doLast {
         println "Run the following command to launch the shell:\n\tjava -jar ${project.shellDir}/cas-server-support-shell-${casServerVersion}.jar"
     }
 }
 
-task debugShell(group: "shell", description: "Run the CAS shell with debug options, wait for debugger on port 5005") {
+task debugShell(group: "Shell", description: "Run the CAS shell with debug options, wait for debugger on port 5005") {
     dependsOn downloadShell
     doLast {
         println """
@@ -137,7 +160,7 @@ task debugShell(group: "shell", description: "Run the CAS shell with debug optio
     }
 }
 
-task showConfiguration(group: "build", description: "Show configurations for each dependency, etc") {
+task showConfiguration(group: "CAS", description: "Show configurations for each dependency, etc") {
     doLast() {
         def cfg = project.hasProperty("configuration") ? project.property("configuration") : "compile"
         configurations.getByName(cfg).each { println it }
@@ -148,7 +171,7 @@ task allDependenciesInsight(group: "build", type: DependencyInsightReportTask, d
 
 task allDependencies(group: "build", type: DependencyReportTask, description: "Display a graph of all project dependencies") {}
 
-task casVersion (group: "build", description: "Display the current CAS version") {
+task casVersion(group: "CAS", description: "Display the current CAS version") {
     doFirst {
         def verbose = project.hasProperty("verbose") && Boolean.valueOf(project.getProperty("verbose"))
         if (verbose) {
@@ -169,7 +192,7 @@ task casVersion (group: "build", description: "Display the current CAS version")
     }
 }
 
-task createKeystore(group: "build", description: "Create CAS keystore") {
+task createKeystore(group: "CAS", description: "Create CAS keystore") {
     doFirst {
         mkdir "/etc/cas"
 
@@ -204,20 +227,79 @@ task createKeystore(group: "build", description: "Create CAS keystore") {
     }
 }
 
-task listTemplateViews (group: "build", description: "List all CAS views") {
+task listTemplateViews(group: "CAS", description: "List all CAS views") {
     dependsOn explodeWar
 
     doFirst {
         fileTree(explodedResourcesDir).matching {
             include "**/*.html"
         }
-        .collect { it.name }
+        .collect { 
+            return it.path.replace(explodedResourcesDir, "")
+        }
         .toSorted()
         .each { println it }
     }
 }
 
-task getResource(group: "build", description: "Fetch a CAS resource and move it into the overlay") {
+task exportConfigMetadata(group: "CAS", description: "Export collection of CAS properties") {
+    doLast {
+        def file = new File(project.rootDir, 'config-metadata.properties')
+        file.withWriter('utf-8') { writer ->
+            def metadataRepository = new org.apereo.cas.metadata.CasConfigurationMetadataRepository()
+            def repository = metadataRepository.repository;
+            repository.allGroups
+                    .values()
+                    .sort { o1, o2 -> o1.id <=> o2.id }
+                    .each({ group ->
+                        def groupProperties = group.properties
+                        if (!groupProperties.isEmpty()) {
+                            def groupId = group.id.equalsIgnoreCase("_ROOT_GROUP_") ? "" : group.id + "."
+
+                            writer.writeLine("# Group ${group.id}");
+                            writer.writeLine("# ====================")
+                            groupProperties
+                                    .values()
+                                    .sort { o1, o2 -> o1.id <=> o2.id }
+                                    .each({ property ->
+                                        def description = property.shortDescription
+                                        if (!property.shortDescription?.equalsIgnoreCase(property.description) && property.description != null) {
+                                            description = property.description.replace('\n', '#')
+                                        }
+                                        writer.writeLine("# ${description}");
+                                        writer.writeLine("# Type: ${property.type}");
+                                        if (property.deprecated) {
+                                            def deprecation = property.deprecation
+                                            writer.writeLine("# This setting is deprecated with a severity level of ${deprecation.level}.")
+                                            if (deprecation.shortReason != null) {
+                                                writer.writeLine("# because ${deprecation.shortReason}")
+                                            }
+                                            if (deprecation.replacement != null) {
+                                                writer.writeLine("# Replace with: ${deprecation.replacement}")
+                                            }
+                                        }
+                                        property.hints.valueHints.each {
+                                            if (it.value instanceof Object[]) {
+                                                if (it.value[0].toString().contains("RequiresModule")) {
+                                                    writer.writeLine("# Required module: org.apereo.cas:${it.description}")
+                                                    writer.writeLine("# Automatically included/available: ${it.value[1]}")
+                                                }
+                                            }
+                                            if (it.value.toString().contains("RequiredProperty")) {
+                                                writer.writeLine("# Note: This setting is required!")
+                                            }
+                                        }
+                                        writer.writeLine("${groupId}${property.name}=${property.defaultValue}")
+                                        writer.writeLine("")
+                                    });
+                        }
+                    });
+        }
+        println "Configuration metadata is available at ${file.absolutePath}"
+    }
+}
+
+task getResource(group: "CAS", description: "Fetch a CAS resource and move it into the overlay") {
     dependsOn explodeWar
 
     doFirst {
@@ -225,13 +307,18 @@ task getResource(group: "build", description: "Fetch a CAS resource and move it 
 
         def results = fileTree(explodedResourcesDir).matching {
             include "**/${resourceName}.*"
+            include "**/${resourceName}"
         }
         if (results.isEmpty()) {
             println "No resources could be found matching ${resourceName}"
             return
         }
         if (results.size() > 1) {
-            println "Multiple resources found matching ${resourceName}: ${results}"
+            println "Multiple resources found matching ${resourceName}:\n"
+            results.each {
+                println "\t-" + it.path.replace(explodedResourcesDir, "")
+            }
+            println "\nNarrow down your search criteria and try again."
             return
         }
 
@@ -252,4 +339,11 @@ task getResource(group: "build", description: "Fetch a CAS resource and move it 
 
 def isRunningCasServerSnapshot(casServerVersion) {
     return "${casServerVersion}".contains("-SNAPSHOT")
+}
+
+task verifyRequiredJavaVersion {
+    logger.info "Checking current Java version ${JavaVersion.current()} for required Java version ${project.targetCompatibility}"
+    if (!JavaVersion.current().name.equalsIgnoreCase("${project.targetCompatibility}")) {
+        throw new GradleException("Current Java version ${JavaVersion.current()} does not match required Java version ${project.targetCompatibility}")
+    }
 }
