Configure HTTP and a static user for local development

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -1,6 +1,15 @@
-cas.server.name=https://cas.example.org:8443
-cas.server.prefix=${cas.server.name}/cas
+# CAS Server
+cas.server.name=http://192.168.168.167:8080
+cas.server.prefix=${cas.server.name}
 
+# Logging
 logging.config=file:/etc/cas/config/log4j2.xml
 
-# cas.authn.accept.users=
+# Authentication: Accept Users Authentication - Demo purpose only, must set to empty for production
+cas.authn.accept.users=longze::rearwindow
+
+# Enable HTTP connections for the embedded Tomcat container
+cas.server.tomcat.http.port=8080
+cas.server.tomcat.http.protocol=org.apache.coyote.http11.Http11NioProtocol
+cas.server.tomcat.http.enabled=true
+cas.server.tomcat.http.attributes.attribute-name=attributeValue
