Configure JSON registered service with attribute release policy

--- a/build.gradle
+++ b/build.gradle
@@ -71,7 +71,8 @@ apply from: rootProject.file("gradle/dockerjib.gradle")
 
 dependencies {
     // Other CAS dependencies/modules may be listed here...
-    // implementation "org.apereo.cas:cas-server-support-json-service-registry:${casServerVersion}"
+    implementation "org.apereo.cas:cas-server-support-generic:${project.'cas.version'}"
+    implementation "org.apereo.cas:cas-server-support-json-service-registry:${project.'cas.version'}"
 }
 
 tasks.findByName("jibDockerBuild")
