--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -5,11 +5,17 @@ cas.server.prefix=${cas.server.name}
 # Logging
 logging.config=file:/etc/cas/config/log4j2.xml
 
-# Authentication: Accept Users Authentication - Demo purpose only, must set to empty for production
-cas.authn.accept.users=longze::rearwindow
+# Authentication: Accept Users Authentication - Demo purpose only, must set to empty on production
+cas.authn.accept.users=
 
 # Enable HTTP connections for the embedded Tomcat container
 cas.server.tomcat.http.port=8080
 cas.server.tomcat.http.protocol=org.apache.coyote.http11.Http11NioProtocol
 cas.server.tomcat.http.enabled=true
 cas.server.tomcat.http.attributes.attribute-name=attributeValue
+
+# Service Registry: JSON Service Registry
+cas.serviceRegistry.json.location=file:/etc/cas/services
+
+# Authentication: JSON Authentication - DevOps purpose only, set to empty unless necessary on production
+cas.authn.json.location=file:/etc/cas/users/osf.json
