Configure logout service redirect

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -18,4 +18,10 @@ cas.server.tomcat.http.attributes.attribute-name=attributeValue
 cas.serviceRegistry.json.location=file:/etc/cas/services
 
 # Authentication: JSON Authentication - DevOps purpose only, set to empty unless necessary on production
-cas.authn.json.location=file:/etc/cas/users/osf.json
+cas.authn.json.location=
+
+# Logout
+cas.logout.follow-service-redirects=true
+cas.logout.redirect-parameter=service
+cas.logout.confirm-logout=false
+cas.logout.remove-descendant-tickets=false
