Set web server servlet path to / for OSF compatibility

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -1,3 +1,6 @@
+# Web Server
+server.servlet.contextPath=/
+
 # CAS Server
 cas.server.name=http://192.168.168.167:8080
 cas.server.prefix=${cas.server.name}
