--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -28,3 +28,20 @@ cas.logout.follow-service-redirects=true
 cas.logout.redirect-parameter=service
 cas.logout.confirm-logout=false
 cas.logout.remove-descendant-tickets=false
+
+# Pac4j Delegated Authentication
+cas.authn.pac4j.typed-id-used=true
+cas.authn.pac4j.lazy-init=true
+cas.authn.pac4j.replicate-sessions=false
+
+# Pac4j Delegated Authentication Clients: ORCiD
+cas.authn.pac4j.orcid.id=changeme
+cas.authn.pac4j.orcid.secret=changme
+cas.authn.pac4j.orcid.client-name=orcid
+cas.authn.pac4j.orcid.enabled=true
+cas.authn.pac4j.orcid.callback-url-type=QUERY_PARAMETER
+
+# Pac4j Delegated Authentication Clients: CAS
+cas.authn.pac4j.cas[0].login-url=http://localhost:8081/login
+cas.authn.pac4j.cas[0].client-name=oldcas
+cas.authn.pac4j.cas[0].protocol=SAML
