Update settings for the CAS client using oldcas / fakecas

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -42,6 +42,7 @@ cas.authn.pac4j.orcid.enabled=true
 cas.authn.pac4j.orcid.callback-url-type=QUERY_PARAMETER
 
 # Pac4j Delegated Authentication Clients: CAS
-cas.authn.pac4j.cas[0].login-url=http://localhost:8081/login
+cas.authn.pac4j.cas[0].login-url=http://192.168.168.167:8081/login
 cas.authn.pac4j.cas[0].client-name=oldcas
-cas.authn.pac4j.cas[0].protocol=SAML
+cas.authn.pac4j.cas[0].protocol=CAS30
+cas.authn.pac4j.cas[0].callback-url-type=QUERY_PARAMETER
