Enable and configure JPA ticket registry
Note: settings in cas.properties are for local development only

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -46,3 +46,53 @@ cas.authn.pac4j.cas[0].login-url=http://192.168.168.167:8081/login
 cas.authn.pac4j.cas[0].client-name=oldcas
 cas.authn.pac4j.cas[0].protocol=CAS30
 cas.authn.pac4j.cas[0].callback-url-type=QUERY_PARAMETER
+
+###############################################################################################################################
+# JPA Ticket Registry
+# See: https://apereo.github.io/cas/6.2.x/ticketing/JPA-Ticket-Registry.html
+###############################################################################################################################
+# Global JDBC Settings
+#
+cas.jdbc.show-sql=true
+cas.jdbc.gen-ddl=true
+cas.jdbc.case-insensitive=false
+# cas.jdbc.physical-table-names=
+# e.g. cas.jdbc.physical-table-names.{table-name}={new-table-name}
+
+# General JPA Settings
+#
+cas.ticket.registry.jpa.user=longzechen
+cas.ticket.registry.jpa.password=
+cas.ticket.registry.jpa.driver-class=org.postgresql.Driver
+cas.ticket.registry.jpa.url=jdbc:postgresql://192.168.168.167:54321/newcas?targetServerType=master
+cas.ticket.registry.jpa.dialect=org.hibernate.dialect.PostgreSQL95Dialect
+cas.ticket.registry.jpa.ddl-auto=update
+cas.ticket.registry.jpa.default-catalog=
+cas.ticket.registry.jpa.default-schema=
+cas.ticket.registry.jpa.health-query=
+cas.ticket.registry.jpa.idle-timeout=PT10M
+cas.ticket.registry.jpa.leak-threshold=3_000
+cas.ticket.registry.jpa.batchSize=1
+cas.ticket.registry.jpa.fail-fast-timeout=1
+cas.ticket.registry.jpa.autocommit=false
+cas.ticket.registry.jpa.isolate-internal-queries=false
+cas.ticket.registry.jpa.isolation-level-name=ISOLATION_READ_COMMITTED
+cas.ticket.registry.jpa.data-source-name=
+cas.ticket.registry.jpa.data-source-proxy=false
+cas.ticket.registry.jpa.physical-naming-strategy-class-name=org.apereo.cas.hibernate.CasHibernatePhysicalNamingStrategy
+cas.ticket.registry.jpa.propagation-behaviorName=PROPAGATION_REQUIRED
+
+# JPA Connection Pooling Properties
+# e.g. cas.ticket.registry.jpa.properties.property-name=propertyValue
+#
+cas.ticket.registry.jpa.pool.min-size=6
+cas.ticket.registry.jpa.pool.max-size=18
+cas.ticket.registry.jpa.pool.max-wait=PT2S
+cas.ticket.registry.jpa.pool.suspension=false
+cas.ticket.registry.jpa.pool.timeout-millis=1000
+
+# JPA Ticket Registry Settings
+#
+cas.ticket.registry.jpa.ticket-lock-type=NONE
+cas.ticket.registry.jpa.jpa-locking-timeout=PT1H
+###############################################################################################################################
