--- a/build.gradle
+++ b/build.gradle
@@ -82,8 +82,16 @@ apply from: rootProject.file("gradle/dockerjib.gradle")
 dependencies {
     // Other CAS dependencies/modules may be listed here...
     implementation "org.apereo.cas:cas-server-support-generic:${project.'cas.version'}"
+
+    // JSON Service Registry
     implementation "org.apereo.cas:cas-server-support-json-service-registry:${project.'cas.version'}"
+
+    // Authentication Delegation
     implementation "org.apereo.cas:cas-server-support-pac4j-webflow:${project.'cas.version'}"
+
+    // JDBC Drivers and JPA Ticket Registry
+    implementation "org.apereo.cas:cas-server-support-jdbc-drivers:${project.'cas.version'}"
+    implementation "org.apereo.cas:cas-server-support-jpa-ticket-registry:${project.'cas.version'}"
 }
 
 tasks.findByName("jibDockerBuild")
