Enable rememeberMe, i.e. cookie persistence

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -71,7 +71,7 @@ cas.ticket.registry.jpa.default-catalog=
 cas.ticket.registry.jpa.default-schema=
 cas.ticket.registry.jpa.health-query=
 cas.ticket.registry.jpa.idle-timeout=PT10M
-cas.ticket.registry.jpa.leak-threshold=3_000
+cas.ticket.registry.jpa.leak-threshold=3000
 cas.ticket.registry.jpa.batchSize=1
 cas.ticket.registry.jpa.fail-fast-timeout=1
 cas.ticket.registry.jpa.autocommit=false
@@ -95,4 +95,33 @@ cas.ticket.registry.jpa.pool.timeout-millis=1000
 #
 cas.ticket.registry.jpa.ticket-lock-type=NONE
 cas.ticket.registry.jpa.jpa-locking-timeout=PT1H
+###############################################################################################################################
+
+
+
+###############################################################################################################################
+# Long-term Authentication: Ticket Granting Cookie (TGC) and Ticket Granting Ticket (TGT)
+# See https://apereo.github.io/cas/6.2.x/installation/Configuring-LongTerm-Authentication.html
+###############################################################################################################################
+# General Cookie Setting for TGC
+#
+cas.tgc.name=osf-cas
+cas.tgc.domain=192.168.168.167
+cas.tgc.path=/
+cas.tgc.comment=OSF CAS Cookie
+cas.tgc.maxAge=-1
+cas.tgc.secure=false
+cas.tgc.http-only=true
+cas.tgc.same-site-policy=Lax
+cas.tgc.pin-to-session=true
+
+# Ticket Granting Cookie Setting
+#
+cas.tgc.remember-me-max-age=P14D
+cas.tgc.auto-configure-cookie-path=true
+
+# Ticket Granting Ticket Persistence Settings
+#
+cas.ticket.tgt.remember-me.enabled=true
+cas.ticket.tgt.remember-me.time-to-kill-in-seconds=7200
 ###############################################################################################################################
