Add OSF JSON authn property to core authn property config

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -30,6 +30,14 @@ cas.logout.confirm-logout=false
 cas.logout.remove-descendant-tickets=false
 
 ###############################################################################################################################
+# OSF Customized Authentication
+###############################################################################################################################
+# OSF JSON Authentication - DevOps purpose only, set to empty unless necessary on production
+cas.authn.osf-json.location=
+cas.authn.osf-json.order=
+###############################################################################################################################
+
+###############################################################################################################################
 # Pac4j Delegated Authentication
 ###############################################################################################################################
 # General settings
