Update model OsfCasUserAccount
* Move verificationKey from attributes to top-level
* Update the OSF JSON authn handler
* Add a default OSF JSON users file for local dev / testing
* Update cas.properties

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -28,14 +28,19 @@ cas.logout.remove-descendant-tickets=false
 
 ###############################################################################################################################
 # OSF Customized Authentication
+# See: https://apereo.github.io/cas/6.2.x/installation/Configuring-Custom-Authentication.html
 ###############################################################################################################################
 # OSF JSON Authentication - DevOps purpose only, set to empty unless necessary on production
-cas.authn.osf-json.location=
-cas.authn.osf-json.order=
+#
+cas.authn.osf-json.location=file:/etc/cas/users/json-authn-osf.json
+cas.authn.osf-json.order=0
 ###############################################################################################################################
+
+
 
 ###############################################################################################################################
 # Pac4j Delegated Authentication
+# https://apereo.github.io/cas/6.2.x/integration/Delegate-Authentication.html
 ###############################################################################################################################
 # General settings
 #
