Configure OSF PostgreSQL authn and JPA properties

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -34,6 +34,15 @@ cas.logout.remove-descendant-tickets=false
 #
 cas.authn.osf-json.location=file:/etc/cas/users/json-authn-osf.json
 cas.authn.osf-json.order=0
+
+# OSF Postgres Authentication
+#
+cas.authn.osf-postgres.order=1
+cas.authn.osf-postgres.jpa.user=postgres
+cas.authn.osf-postgres.jpa.password=
+cas.authn.osf-postgres.jpa.driver-class=org.postgresql.Driver
+cas.authn.osf-postgres.jpa.url=jdbc:postgresql://192.168.168.167:5432/osf?targetServerType=master&readOnly=true
+cas.authn.osf-postgres.jpa.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 ###############################################################################################################################
 
 
