Implement OSF user / email models and JPA OSF DAOs
* AbstractOsfDao: abstract class, implements methods that do not
  need to make direct database queries
* JpaOsfDao: set the entity manager and transaction manager; and
  implements methods that make direct database queries
* AbstractOsfModel: abstract base model class for all OSF models,
  implements shared properties and methods
* OsfEmail and OsfUser: partially implemented with only username,
  email, password and verification key (no status check).

--- a/build.gradle
+++ b/build.gradle
@@ -98,6 +98,9 @@ dependencies {
     // Authentication Customization
     implementation "org.apereo.cas:cas-server-core-authentication-api:${project.'cas.version'}"
 
+    // JPA for OSF PostgreSQL
+    implementation "org.apereo.cas:cas-server-support-jpa-util:${project.'cas.version'}"
+
     // Authentication Delegation: Vanilla
     implementation "org.apereo.cas:cas-server-support-pac4j-webflow:${project.'cas.version'}"
     // Authentication Delegation: Customization
