--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -56,7 +56,7 @@ cas.authn.osf-postgres.jpa.user=postgres
 cas.authn.osf-postgres.jpa.password=
 cas.authn.osf-postgres.jpa.driver-class=org.postgresql.Driver
 cas.authn.osf-postgres.jpa.url=jdbc:postgresql://192.168.168.167:5432/osf?targetServerType=master&readOnly=true
-cas.authn.osf-postgres.jpa.dialect=org.hibernate.dialect.PostgreSQL95Dialect
+cas.authn.osf-postgres.jpa.dialect=org.apereo.cas.adaptors.osf.hibernate.dialects.OsfPostgresDialect
 ###############################################################################################################################
 
 
