--- a/gradle.properties
+++ b/gradle.properties
@@ -26,3 +26,6 @@ gradleLombokPluginVersion=4.1.5
 # (https://hub.docker.com/r/adoptopenjdk/openjdk11/tags/)
 baseDockerImage=adoptopenjdk/openjdk11:alpine-jre
 allowInsecureRegistries=false
+
+gsonVersion=2.8.6
+hibernateCoreVersion=5.4.21.Final
