Prepare authn properties and credentials for OSF Postgres Authn

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -51,6 +51,7 @@ cas.authn.osf-json.order=0
 
 # OSF Postgres Authentication
 #
+cas.authn.osf-postgres.enabled=true
 cas.authn.osf-postgres.order=1
 cas.authn.osf-postgres.jpa.user=postgres
 cas.authn.osf-postgres.jpa.password=
