Refactor JSON authn hdlr in the presence of Postgres auth hdlr
* Handler disabled
* Handler order lowered
* No longer handles verification key
* Use super-class PrincipalNameTransformer
* Local services and users JSON updated
* Ohter minor improvements

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -46,13 +46,14 @@ cas.logout.remove-descendant-tickets=false
 ###############################################################################################################################
 # OSF JSON Authentication - DevOps purpose only, set to empty unless necessary on production
 #
-cas.authn.osf-json.location=file:/etc/cas/users/json-authn-osf.json
-cas.authn.osf-json.order=0
+cas.authn.osf-json.location=file:/etc/cas/users/osf-json-authn.json
+cas.authn.osf-json.enabled=false
+# cas.authn.osf-json.order=
 
 # OSF Postgres Authentication
 #
 cas.authn.osf-postgres.enabled=true
-cas.authn.osf-postgres.order=1
+cas.authn.osf-postgres.order=0
 cas.authn.osf-postgres.jpa.user=postgres
 cas.authn.osf-postgres.jpa.password=
 cas.authn.osf-postgres.jpa.driver-class=org.postgresql.Driver
