Overlay CasCoreWebflowConfiguration - copy as of 6.2.1
org.apereo.cas.web.flow.config.CasCoreWebflowConfiguration contains
bean configurations for authentication exception handlers and the
handledAuthenticationExceptions that defines the handled error list
which is used by every exception handlers.

--- a/build.gradle
+++ b/build.gradle
@@ -97,6 +97,7 @@ dependencies {
 
     // Authentication Customization
     implementation "org.apereo.cas:cas-server-core-authentication-api:${project.'cas.version'}"
+    implementation "org.apereo.cas:cas-server-core-authentication-mfa-api:${project.'cas.version'}"
 
     // Authentication Delegation: Vanilla
     implementation "org.apereo.cas:cas-server-support-pac4j-webflow:${project.'cas.version'}"
