Refactor web flow configuration
* Implement OsfCasLoginWebflowConfigurer that extends the previously
  overlaid built-in DefaultLoginWebflowConfigurer with all existing
  OSF CAS web flow customizations implemented via bean config / init
  overriding.
* In addition, create OsfCasWebflowContextConfiguration that extends
  the built-in CasWebflowContextConfiguration to select the above
  OSF CAS web flow configurerer as the defaultWebflowConfigurer.
* As usual, delete the overlaid class, update auto-configurations in
  spring.factories and dependencies in build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -92,6 +92,7 @@ dependencies {
     implementation "org.apereo.cas:cas-server-core-web-api:${project.'cas.version'}"
 
     // Web Flow Customization
+    implementation "org.apereo.cas:cas-server-core-webflow:${project.'cas.version'}"
     implementation "org.apereo.cas:cas-server-core-webflow-api:${project.'cas.version'}"
     implementation "org.apereo.cas:cas-server-support-actions:${project.'cas.version'}"
 
