Remove deprecated OsfJsonAuthenticationHandler

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -41,19 +41,16 @@ cas.logout.remove-descendant-tickets=false
 
 
 ###############################################################################################################################
-# OSF Customized Authentication
+# OSF PostgreSQL Authentication
 # See: https://apereo.github.io/cas/6.2.x/installation/Configuring-Custom-Authentication.html
 ###############################################################################################################################
-# OSF JSON Authentication - DevOps purpose only, set to empty unless necessary on production
-#
-cas.authn.osf-json.location=file:/etc/cas/users/osf-json-authn.json
-cas.authn.osf-json.enabled=false
-# cas.authn.osf-json.order=
-
-# OSF Postgres Authentication
+# Authentication settings
 #
 cas.authn.osf-postgres.enabled=true
 cas.authn.osf-postgres.order=0
+
+# JPA settings for OSF PostgreSQL
+#
 cas.authn.osf-postgres.jpa.user=postgres
 cas.authn.osf-postgres.jpa.password=
 cas.authn.osf-postgres.jpa.driver-class=org.postgresql.Driver
