--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -17,33 +17,33 @@ cas.server.tomcat.http.protocol=org.apache.coyote.http11.Http11NioProtocol
 cas.server.tomcat.http.enabled=true
 cas.server.tomcat.http.attributes.attribute-name=attributeValue
 
-###############################################################################################################################
+########################################################################################################################
 # JSON Service Registry
 # See: https://apereo.github.io/cas/6.2.x/services/JSON-Service-Management.html
-###############################################################################################################################
+########################################################################################################################
 cas.serviceRegistry.json.location=file:/etc/cas/services
-###############################################################################################################################
+########################################################################################################################
 
 
 
-###############################################################################################################################
+########################################################################################################################
 # CAS Logout and Single Logout (SLO)
 # https://apereo.github.io/cas/6.2.x/installation/Logout-Single-Signout.html
-###############################################################################################################################
+########################################################################################################################
 # CAS Logout
 #
 cas.logout.follow-service-redirects=true
 cas.logout.redirect-parameter=service
 cas.logout.confirm-logout=false
 cas.logout.remove-descendant-tickets=false
-###############################################################################################################################
+########################################################################################################################
 
 
 
-###############################################################################################################################
+########################################################################################################################
 # OSF PostgreSQL Authentication
 # See: https://apereo.github.io/cas/6.2.x/installation/Configuring-Custom-Authentication.html
-###############################################################################################################################
+########################################################################################################################
 # Authentication settings
 #
 cas.authn.osf-postgres.enabled=true
@@ -56,14 +56,14 @@ cas.authn.osf-postgres.jpa.password=
 cas.authn.osf-postgres.jpa.driver-class=org.postgresql.Driver
 cas.authn.osf-postgres.jpa.url=jdbc:postgresql://192.168.168.167:5432/osf?targetServerType=master&readOnly=true
 cas.authn.osf-postgres.jpa.dialect=org.apereo.cas.adaptors.osf.hibernate.dialects.OsfPostgresDialect
-###############################################################################################################################
+########################################################################################################################
 
 
 
-###############################################################################################################################
+########################################################################################################################
 # JPA Ticket Registry
 # See: https://apereo.github.io/cas/6.2.x/ticketing/JPA-Ticket-Registry.html
-###############################################################################################################################
+########################################################################################################################
 # Global JDBC Settings
 #
 cas.jdbc.show-sql=true
@@ -108,14 +108,14 @@ cas.ticket.registry.jpa.pool.timeout-millis=1000
 #
 cas.ticket.registry.jpa.ticket-lock-type=NONE
 cas.ticket.registry.jpa.jpa-locking-timeout=PT1H
-###############################################################################################################################
+########################################################################################################################
 
 
 
-###############################################################################################################################
+########################################################################################################################
 # Long-term Authentication: Ticket Granting Cookie (TGC) and Ticket Granting Ticket (TGT)
 # See https://apereo.github.io/cas/6.2.x/installation/Configuring-LongTerm-Authentication.html
-###############################################################################################################################
+########################################################################################################################
 # General Cookie Setting for TGC
 #
 cas.tgc.name=osf-cas
@@ -137,20 +137,27 @@ cas.tgc.auto-configure-cookie-path=true
 #
 cas.ticket.tgt.remember-me.enabled=true
 cas.ticket.tgt.remember-me.time-to-kill-in-seconds=7200
-###############################################################################################################################
+########################################################################################################################
 
 
 
-###############################################################################################################################
+########################################################################################################################
 # Pac4j Delegated Authentication
 # https://apereo.github.io/cas/6.2.x/integration/Delegate-Authentication.html
-###############################################################################################################################
+########################################################################################################################
 # General settings
 #
 cas.authn.pac4j.typed-id-used=true
 cas.authn.pac4j.lazy-init=true
 cas.authn.pac4j.replicate-sessions=false
-
+#
+# Non-institution clients
+cas.authn.osf-postgres.non-institution-clients[0]=${cas.authn.pac4j.orcid.client-name}
+#
+# Institution clients
+#
+cas.authn.osf-postgres.institution-clients[0]=${cas.authn.pac4j.cas[0].client-name}
+#
 # Delegation Client: ORCiD
 #
 cas.authn.pac4j.orcid.id=changeme
@@ -158,11 +165,11 @@ cas.authn.pac4j.orcid.secret=changeme
 cas.authn.pac4j.orcid.client-name=orcid
 cas.authn.pac4j.orcid.enabled=true
 cas.authn.pac4j.orcid.callback-url-type=QUERY_PARAMETER
-
+#
 # Delegation Clients: CAS
 #
 cas.authn.pac4j.cas[0].login-url=http://192.168.168.167:8081/login
 cas.authn.pac4j.cas[0].client-name=oldcas
 cas.authn.pac4j.cas[0].protocol=CAS30
 cas.authn.pac4j.cas[0].callback-url-type=QUERY_PARAMETER
-###############################################################################################################################
+########################################################################################################################
