Rename authn client oldcas to fakecas

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -169,7 +169,7 @@ cas.authn.pac4j.orcid.callback-url-type=QUERY_PARAMETER
 # Delegation Clients: CAS
 #
 cas.authn.pac4j.cas[0].login-url=http://192.168.168.167:8081/login
-cas.authn.pac4j.cas[0].client-name=oldcas
+cas.authn.pac4j.cas[0].client-name=fakecas
 cas.authn.pac4j.cas[0].protocol=CAS30
 cas.authn.pac4j.cas[0].callback-url-type=QUERY_PARAMETER
 ########################################################################################################################
