Re-package OSF CAS implementations under io.cos.cas.osf
* FROM org.apereo.cas.adaptors.osf to io.cos.cas.osf
* Package names: plural -> singular
* Updated spring.factories and cas.properties accordingly
* Added a README.md to keep the org/apereo/cas/adaptors/osf/ folder

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -55,7 +55,7 @@ cas.authn.osf-postgres.jpa.user=postgres
 cas.authn.osf-postgres.jpa.password=
 cas.authn.osf-postgres.jpa.driver-class=org.postgresql.Driver
 cas.authn.osf-postgres.jpa.url=jdbc:postgresql://192.168.168.167:5432/osf?targetServerType=master&readOnly=true
-cas.authn.osf-postgres.jpa.dialect=org.apereo.cas.adaptors.osf.hibernate.dialects.OsfPostgresDialect
+cas.authn.osf-postgres.jpa.dialect=io.cos.cas.osf.hibernate.dialect.OsfPostgresDialect
 ########################################################################################################################
 
 
