Fine tune loggers and logging levels and disable SQL in logs

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -66,7 +66,7 @@ cas.authn.osf-postgres.jpa.dialect=io.cos.cas.osf.hibernate.dialect.OsfPostgresD
 ########################################################################################################################
 # Global JDBC Settings
 #
-cas.jdbc.show-sql=true
+cas.jdbc.show-sql=false
 cas.jdbc.gen-ddl=true
 cas.jdbc.case-insensitive=false
 # cas.jdbc.physical-table-names=
