Add stage1CAS and stage2CAS as external IdPs
* fakeCAS is used for local development but is not available on
  staging servers. Thus, add stage[1|2]CAS (oldCAS) to servee as
  external identity providers for stage3CAS (newCAS).
* stage1CAS uses the "SAML" endpoint for service validation and
  attribute release while stage2CAS uses the "P3" endpoint.
* DevOps needs to re-configure both stage[1|2]CAS by registering
  stage3CAS as an authorized reigstered service.
* In addititon, updated local registered service JSON files to
  allow access to both delegation clients

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -157,6 +157,8 @@ cas.authn.osf-postgres.non-institution-clients[0]=${cas.authn.pac4j.orcid.client
 # Institution clients
 #
 cas.authn.osf-postgres.institution-clients[0]=${cas.authn.pac4j.cas[0].client-name}
+cas.authn.osf-postgres.institution-clients[1]=${cas.authn.pac4j.cas[1].client-name}
+cas.authn.osf-postgres.institution-clients[2]=${cas.authn.pac4j.cas[2].client-name}
 #
 # Delegation Client: ORCiD
 #
@@ -172,4 +174,15 @@ cas.authn.pac4j.cas[0].login-url=http://192.168.168.167:8081/login
 cas.authn.pac4j.cas[0].client-name=fakecas
 cas.authn.pac4j.cas[0].protocol=CAS30
 cas.authn.pac4j.cas[0].callback-url-type=QUERY_PARAMETER
+#
+cas.authn.pac4j.cas[1].login-url=https://accounts.staging2.osf.io/login
+cas.authn.pac4j.cas[1].client-name=stage2cas
+cas.authn.pac4j.cas[1].protocol=SAML
+cas.authn.pac4j.cas[1].callback-url-type=QUERY_PARAMETER
+#
+cas.authn.pac4j.cas[2].login-url=https://accounts.staging.osf.io/login
+cas.authn.pac4j.cas[2].client-name=stage1cas
+cas.authn.pac4j.cas[2].protocol=CAS30
+cas.authn.pac4j.cas[2].callback-url-type=QUERY_PARAMETER
+#
 ########################################################################################################################
