Enable signing and encryption for client session and cookie

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -17,6 +17,8 @@ cas.server.tomcat.http.protocol=org.apache.coyote.http11.Http11NioProtocol
 cas.server.tomcat.http.enabled=true
 cas.server.tomcat.http.attributes.attribute-name=attributeValue
 
+
+
 ########################################################################################################################
 # JSON Service Registry
 # See: https://apereo.github.io/cas/6.2.x/services/JSON-Service-Management.html
@@ -113,10 +115,30 @@ cas.ticket.registry.jpa.jpa-locking-timeout=PT1H
 
 
 ########################################################################################################################
+# Signing and Encryption
+# See: https://apereo.github.io/cas/6.2.x/configuration/Configuration-Properties-Common.html#signing--encryption
+########################################################################################################################
+# Spring Client Session
+# See: https://apereo.github.io/cas/6.2.x/configuration/Configuration-Properties.html#spring-webflow-client-side-session
+#
+cas.webflow.crypto.signing.key=changeme
+cas.webflow.crypto.encryption.key=changeme
+#
+# Ticket Granting Cookie (TGC)
+# See: https://apereo.github.io/cas/6.2.x/configuration/Configuration-Properties.html#signing--encryption-4
+#
+cas.tgc.crypto.signing.key=changeme
+cas.tgc.crypto.encryption.key=changeme
+#
+########################################################################################################################
+
+
+
+########################################################################################################################
 # Long-term Authentication: Ticket Granting Cookie (TGC) and Ticket Granting Ticket (TGT)
 # See https://apereo.github.io/cas/6.2.x/installation/Configuring-LongTerm-Authentication.html
 ########################################################################################################################
-# General Cookie Setting for TGC
+# General Cookie Setting for Ticket Granting Cookie
 #
 cas.tgc.name=osf-cas
 cas.tgc.domain=192.168.168.167
@@ -127,16 +149,17 @@ cas.tgc.secure=false
 cas.tgc.http-only=true
 cas.tgc.same-site-policy=Lax
 cas.tgc.pin-to-session=true
-
-# Ticket Granting Cookie Setting
+#
+# Ticket Granting Cookie Specific Settings
 #
 cas.tgc.remember-me-max-age=P14D
 cas.tgc.auto-configure-cookie-path=true
-
+#
 # Ticket Granting Ticket Persistence Settings
 #
 cas.ticket.tgt.remember-me.enabled=true
 cas.ticket.tgt.remember-me.time-to-kill-in-seconds=7200
+#
 ########################################################################################################################
 
 
