--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -1,9 +1,32 @@
-# Web Server
+########################################################################################################################
+# Server Settings
+########################################################################################################################
+# Server
+#
+server.port=8080
+# Servlet
 server.servlet.contextPath=/
-
+#
+# SSL
+server.ssl.enabled=false
+#
 # CAS Server
 cas.server.name=http://192.168.168.167:8080
 cas.server.prefix=${cas.server.name}
+# cas.server.scope=localhost
+#
+# Tomcat Server
+#
+cas.server.tomcat.server-name=OSF CAS
+#
+# Enable additional HTTP connections for the embedded Tomcat container (when SSL is enabled by default)
+# cas.server.tomcat.http.port=8080
+# cas.server.tomcat.http.protocol=org.apache.coyote.http11.Http11NioProtocol
+# cas.server.tomcat.http.enabled=true
+# cas.server.tomcat.http.attributes=
+# e.g. cas.server.tomcat.http.attributes.{attribute-name}={attributeValue}
+########################################################################################################################
+
 
 # Logging
 logging.config=file:/etc/cas/config/log4j2.xml
