Minor config updates for staging deployment
* Increased CAS DB JPA leak threshold from 3000 to 6000
* Increased CAS DB JPA batch size to 1 to 5
* Increased long-term authn expiration time from 14 to 28 days
* Moved fakecas to the last of delegated authentication
* Updated JSON registries to disable CAS client delegations
* Improved readability

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -28,17 +28,20 @@ cas.server.tomcat.server-name=OSF CAS
 ########################################################################################################################
 
 
-# Logging
+
+########################################################################################################################
+# Logging Settings
+########################################################################################################################
 logging.config=file:/etc/cas/config/log4j2.xml
+########################################################################################################################
 
-# Authentication: Accept Users Authentication - Demo purpose only, must set to empty on production
+
+
+########################################################################################################################
+# Accept Users Authentication - Demo purpose only, must set to empty on production
+########################################################################################################################
 cas.authn.accept.users=
-
-# Enable HTTP connections for the embedded Tomcat container
-cas.server.tomcat.http.port=8080
-cas.server.tomcat.http.protocol=org.apache.coyote.http11.Http11NioProtocol
-cas.server.tomcat.http.enabled=true
-cas.server.tomcat.http.attributes.attribute-name=attributeValue
+########################################################################################################################
 
 
 
@@ -96,7 +99,7 @@ cas.jdbc.gen-ddl=true
 cas.jdbc.case-insensitive=false
 # cas.jdbc.physical-table-names=
 # e.g. cas.jdbc.physical-table-names.{table-name}={new-table-name}
-
+#
 # General JPA Settings
 #
 cas.ticket.registry.jpa.user=longzechen
@@ -109,8 +112,8 @@ cas.ticket.registry.jpa.default-catalog=
 cas.ticket.registry.jpa.default-schema=
 cas.ticket.registry.jpa.health-query=
 cas.ticket.registry.jpa.idle-timeout=PT10M
-cas.ticket.registry.jpa.leak-threshold=3000
-cas.ticket.registry.jpa.batchSize=1
+cas.ticket.registry.jpa.leak-threshold=6000
+cas.ticket.registry.jpa.batchSize=5
 cas.ticket.registry.jpa.fail-fast-timeout=1
 cas.ticket.registry.jpa.autocommit=false
 cas.ticket.registry.jpa.isolate-internal-queries=false
@@ -119,7 +122,7 @@ cas.ticket.registry.jpa.data-source-name=
 cas.ticket.registry.jpa.data-source-proxy=false
 cas.ticket.registry.jpa.physical-naming-strategy-class-name=org.apereo.cas.hibernate.CasHibernatePhysicalNamingStrategy
 cas.ticket.registry.jpa.propagation-behaviorName=PROPAGATION_REQUIRED
-
+#
 # JPA Connection Pooling Properties
 # e.g. cas.ticket.registry.jpa.properties.property-name=propertyValue
 #
@@ -128,7 +131,7 @@ cas.ticket.registry.jpa.pool.max-size=18
 cas.ticket.registry.jpa.pool.max-wait=PT2S
 cas.ticket.registry.jpa.pool.suspension=false
 cas.ticket.registry.jpa.pool.timeout-millis=1000
-
+#
 # JPA Ticket Registry Settings
 #
 cas.ticket.registry.jpa.ticket-lock-type=NONE
@@ -166,7 +169,7 @@ cas.tgc.crypto.encryption.key=changeme
 cas.tgc.name=osf-cas
 cas.tgc.domain=192.168.168.167
 cas.tgc.path=/
-cas.tgc.comment=OSF CAS Cookie
+cas.tgc.comment=OSF CAS Ticket Granting Cookie
 cas.tgc.maxAge=-1
 cas.tgc.secure=false
 cas.tgc.http-only=true
@@ -175,7 +178,7 @@ cas.tgc.pin-to-session=true
 #
 # Ticket Granting Cookie Specific Settings
 #
-cas.tgc.remember-me-max-age=P14D
+cas.tgc.remember-me-max-age=P28D
 cas.tgc.auto-configure-cookie-path=true
 #
 # Ticket Granting Ticket Persistence Settings
@@ -214,21 +217,20 @@ cas.authn.pac4j.orcid.client-name=orcid
 cas.authn.pac4j.orcid.enabled=true
 cas.authn.pac4j.orcid.callback-url-type=QUERY_PARAMETER
 #
-# Delegation Clients: CAS
+# Delegation Client: CAS
 #
-cas.authn.pac4j.cas[0].login-url=http://192.168.168.167:8081/login
-cas.authn.pac4j.cas[0].client-name=fakecas
-cas.authn.pac4j.cas[0].protocol=CAS30
+cas.authn.pac4j.cas[0].login-url=https://accounts.staging.osf.io/login
+cas.authn.pac4j.cas[0].client-name=stage1cas
+cas.authn.pac4j.cas[0].protocol=SAML
 cas.authn.pac4j.cas[0].callback-url-type=QUERY_PARAMETER
 #
 cas.authn.pac4j.cas[1].login-url=https://accounts.staging2.osf.io/login
 cas.authn.pac4j.cas[1].client-name=stage2cas
-cas.authn.pac4j.cas[1].protocol=SAML
+cas.authn.pac4j.cas[1].protocol=CAS30
 cas.authn.pac4j.cas[1].callback-url-type=QUERY_PARAMETER
 #
-cas.authn.pac4j.cas[2].login-url=https://accounts.staging.osf.io/login
-cas.authn.pac4j.cas[2].client-name=stage1cas
+cas.authn.pac4j.cas[2].login-url=http://192.168.168.167:8081/login
+cas.authn.pac4j.cas[2].client-name=fakecas
 cas.authn.pac4j.cas[2].protocol=CAS30
 cas.authn.pac4j.cas[2].callback-url-type=QUERY_PARAMETER
-#
 ########################################################################################################################
