--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -3,7 +3,7 @@
 ########################################################################################################################
 # Server
 #
-server.port=${TOMCAT_HTTP_PORT:80}
+server.port=${TOMCAT_HTTP_PORT:8080}
 # Servlet
 server.servlet.contextPath=/
 #
@@ -26,15 +26,11 @@ cas.server.tomcat.server-name=OSF CAS
 # e.g. cas.server.tomcat.http.attributes.{attribute-name}={attributeValue}
 ########################################################################################################################
 
-
-
 ########################################################################################################################
 # Logging Settings
 ########################################################################################################################
 logging.config=file:/etc/cas/config/log4j2.xml
 ########################################################################################################################
-
-
 
 ########################################################################################################################
 # Accept Users Authentication - Demo purpose only, must set to empty on production
@@ -42,16 +38,12 @@ logging.config=file:/etc/cas/config/log4j2.xml
 cas.authn.accept.users=
 ########################################################################################################################
 
-
-
 ########################################################################################################################
 # JSON Service Registry
 # See: https://apereo.github.io/cas/6.2.x/services/JSON-Service-Management.html
 ########################################################################################################################
 cas.serviceRegistry.json.location=file:/etc/cas/services
 ########################################################################################################################
-
-
 
 ########################################################################################################################
 # CAS Logout and Single Logout (SLO)
@@ -65,8 +57,6 @@ cas.logout.confirm-logout=false
 cas.logout.remove-descendant-tickets=false
 ########################################################################################################################
 
-
-
 ########################################################################################################################
 # OSF PostgreSQL Authentication
 # See: https://apereo.github.io/cas/6.2.x/installation/Configuring-Custom-Authentication.html
@@ -75,7 +65,7 @@ cas.logout.remove-descendant-tickets=false
 #
 cas.authn.osf-postgres.enabled=true
 cas.authn.osf-postgres.order=0
-
+#
 # JPA settings for OSF PostgreSQL
 #
 cas.authn.osf-postgres.jpa.user=${OSF_DB_USER:postgres}
@@ -84,8 +74,6 @@ cas.authn.osf-postgres.jpa.driver-class=${OSF_DB_DRIVER_CLASS:org.postgresql.Dri
 cas.authn.osf-postgres.jpa.url=${OSF_DB_URL:jdbc:postgresql://192.168.168.167:5432/osf?targetServerType=master&readOnly=true}
 cas.authn.osf-postgres.jpa.dialect=${OSF_DB_HIBERNATE_DIALECT:io.cos.cas.osf.hibernate.dialect.OsfPostgresDialect}
 ########################################################################################################################
-
-
 
 ########################################################################################################################
 # JPA Ticket Registry
@@ -104,7 +92,7 @@ cas.jdbc.case-insensitive=false
 cas.ticket.registry.jpa.user=${CAS_DB_USER:postgres}
 cas.ticket.registry.jpa.password=${CAS_DB_PASSWORD:}
 cas.ticket.registry.jpa.driver-class=${CAS_DB_DRIVER_CLASS:org.postgresql.Driver}
-cas.ticket.registry.jpa.url=${CAS_DB_URL:jdbc:postgresql://127.0.0.1:5432/cas?targetServerType=master}
+cas.ticket.registry.jpa.url=${CAS_DB_URL:jdbc:postgresql://127.0.0.1:5432/osf-cas?targetServerType=master}
 cas.ticket.registry.jpa.dialect=${CAS_DB_HIBERNATE_DIALECT:org.hibernate.dialect.PostgreSQL95Dialect}
 cas.ticket.registry.jpa.ddl-auto=update
 cas.ticket.registry.jpa.default-catalog=
@@ -137,8 +125,6 @@ cas.ticket.registry.jpa.ticket-lock-type=NONE
 cas.ticket.registry.jpa.jpa-locking-timeout=PT1H
 ########################################################################################################################
 
-
-
 ########################################################################################################################
 # Signing and Encryption
 # See: https://apereo.github.io/cas/6.2.x/configuration/Configuration-Properties-Common.html#signing--encryption
@@ -154,10 +140,7 @@ cas.webflow.crypto.encryption.key=${WEB_FLOW_ENCRYPTION_KEY}
 #
 cas.tgc.crypto.signing.key=${TGC_SIGNING_KEY}
 cas.tgc.crypto.encryption.key=${TGC_ENCRYPTION_KEY}
-#
 ########################################################################################################################
-
-
 
 ########################################################################################################################
 # Long-term Authentication: Ticket Granting Cookie (TGC) and Ticket Granting Ticket (TGT)
@@ -184,10 +167,7 @@ cas.tgc.auto-configure-cookie-path=true
 #
 cas.ticket.tgt.remember-me.enabled=true
 cas.ticket.tgt.remember-me.time-to-kill-in-seconds=7200
-#
 ########################################################################################################################
-
-
 
 ########################################################################################################################
 # Pac4j Delegated Authentication
@@ -226,5 +206,4 @@ cas.authn.pac4j.cas[1].login-url=https://accounts.staging2.osf.io/login
 cas.authn.pac4j.cas[1].client-name=stage2cas
 cas.authn.pac4j.cas[1].protocol=CAS30
 cas.authn.pac4j.cas[1].callback-url-type=QUERY_PARAMETER
-#
 ########################################################################################################################
